--- a/rt.cabal
+++ b/rt.cabal
@@ -8,3 +8,7 @@ Cabal-Version:       >=1.2
 Executable rt
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, random, haskell98
+
+Library
+   Exposed-modules:   Geometry, Light, Math, Random
+   ghc-options:       -Wall
