--- a/rt.cabal
+++ b/rt.cabal
@@ -7,5 +7,5 @@ Build-Type:          Simple
 Cabal-Version:       >=1.2
 Executable rt
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, random, haskell98
-   ghc-options: -Wall -O2
+   Build-Depends:     base >= 3 && < 5, random, haskell98, array
+   ghc-options: -Wall -O2 -prof -auto-all -caf-all
