--- a/rt.cabal
+++ b/rt.cabal
@@ -8,4 +8,4 @@ Cabal-Version:       >=1.2
 Executable rt
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, random, haskell98, array
-   ghc-options: -Wall -O2
+   ghc-options: -Wall -O2 -prof -auto-all -caf-all
