--- a/rt.cabal
+++ b/rt.cabal
@@ -5,7 +5,13 @@ Author:              Matthias Treydte
 Maintainer:          waldheinz@gmail.com
 Build-Type:          Simple
 Cabal-Version:       >=1.2
+
 Executable rt
+   Main-is:           Main.hs
+   Build-Depends:     base >= 3 && < 5, random, haskell98, array
+   ghc-options: -Wall -O2
+
+Executable rt.debug
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, random, haskell98, array
    ghc-options: -Wall -O2 -prof -auto-all -caf-all
