--- a/rt.cabal
+++ b/rt.cabal
@@ -8,10 +8,10 @@ Cabal-Version:       >=1.2
 
 Executable rt
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, random, haskell98, array, mwc-random, vector
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector
    ghc-options: -Wall -O2
 
 Executable rt.debug
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, random, haskell98, array, mwc-random, vector
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector
    ghc-options: -Wall -O2 -prof -auto-all -caf-all
