--- a/rt.cabal
+++ b/rt.cabal
@@ -8,6 +8,6 @@ Cabal-Version:       >=1.2
 
 Executable rt
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring, colour
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
    ghc-options: -Wall -O2
 
