--- a/rt.cabal
+++ b/rt.cabal
@@ -6,8 +6,10 @@ Maintainer:          waldheinz@gmail.com
 Build-Type:          Simple
 Cabal-Version:       >=1.2
 
+
 Executable rt
+   hs-source-dirs:    src
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
-   ghc-options: -Wall -O2
+   ghc-options:       -Wall -O2
 
