--- a/rt.cabal
+++ b/rt.cabal
@@ -6,6 +6,9 @@ Maintainer:          waldheinz@gmail.com
 Build-Type:          Simple
 Cabal-Version:       >=1.2
 
+--
+-- the optimized executable
+--
 
 Executable rt
    hs-source-dirs:    src
@@ -13,3 +16,12 @@ Executable rt
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
    ghc-options:       -Wall -O2
 
+--
+-- the profiling executable
+--
+
+Executable rt-prof
+   hs-source-dirs:    src
+   Main-is:           Main.hs
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
+   ghc-options:       -auto-all
