--- a/rt.cabal
+++ b/rt.cabal
@@ -14,7 +14,7 @@ Executable rt
    hs-source-dirs:    src
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
-   ghc-options:       -Wall -O2
+   ghc-options:       -Wall -O2 -fexcess-precision
 
 --
 -- the profiling executable
