--- a/rt.cabal
+++ b/rt.cabal
@@ -13,7 +13,7 @@ Cabal-Version:       >=1.2
 Executable rt
    hs-source-dirs:    src
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring, parsec
    ghc-options:       -Wall -O2 -fexcess-precision
 
 --
@@ -23,5 +23,5 @@ Executable rt
 Executable rt-prof
    hs-source-dirs:    src
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring, parsec
    ghc-options:       -auto-all
