Added some statistics output.

--- a/rt.cabal
+++ b/rt.cabal
@@ -10,6 +10,8 @@ Cabal-Version:       >=1.2
 Executable rt
    hs-source-dirs:    src
    Main-is:           Main.hs
-   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, random, bitset, bytestring, parsec
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, 
+      random, bitset, bytestring, parsec, pretty
    ghc-options:       -Wall -O2 -fexcess-precision
    ghc-prof-options:  -prof -auto-all 
+   
