--- a/bling.cabal
+++ b/bling.cabal
@@ -13,3 +13,12 @@ Executable bling
       random, bitset, bytestring, parsec, pretty
    ghc-options:       -Wall -O2 -fexcess-precision
    ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
+   
+Executable bling-benchmark
+   hs-source-dirs:    src
+   Main-is:           Benchmark.hs
+   Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, 
+      random, bitset, bytestring, parsec, pretty, criterion >= 0.5 && < 0.6
+   ghc-options:       -Wall -O2 -fexcess-precision
+   ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
+
