--- a/bling.cabal
+++ b/bling.cabal
@@ -10,7 +10,8 @@ Executable bling
    hs-source-dirs:    src
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, 
-      random, bitset, bytestring, parsec, pretty
+      random, bitset, bytestring, parsec, pretty,
+      deepseq >= 1.1 && < 1.2
    ghc-options:       -Wall -O2 -fexcess-precision
    ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
    
