Cleaned up Filter, added benchmark for this.

--- a/bling.cabal
+++ b/bling.cabal
@@ -10,8 +10,9 @@ Executable bling
    hs-source-dirs:    src
    Main-is:           Main.hs
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, 
-      random, bitset, bytestring, parsec, pretty,
-      deepseq >= 1.1 && < 1.2
+      bitset, bytestring, parsec, pretty,
+      deepseq >= 1.1 && < 1.2,
+      random >= 1.0 && < 1.1
    ghc-options:       -Wall -O2 -fexcess-precision
    ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
    
@@ -19,7 +20,9 @@ Executable bling-benchmark
    hs-source-dirs:    src
    Main-is:           Benchmark.hs
    Build-Depends:     base >= 3 && < 5, haskell98, array, mwc-random, vector, 
-      random, bitset, bytestring, parsec, pretty, criterion >= 0.5 && < 0.6
+      bitset, bytestring, parsec, pretty,
+      criterion >= 0.5 && < 0.6,
+      random >= 1.0 && < 1.1
    ghc-options:       -Wall -O2 -fexcess-precision
    ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
 
