--- a/bling.cabal
+++ b/bling.cabal
@@ -14,7 +14,7 @@ Executable bling
       deepseq >= 1.1 && < 1.2,
       random >= 1.0 && < 1.1
    ghc-options:       -Wall -O2 -fexcess-precision
-   ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
+   ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all -rtsopts
    
 Executable bling-benchmark
    hs-source-dirs:    src
@@ -24,5 +24,4 @@ Executable bling-benchmark
       criterion >= 0.5 && < 0.6,
       random >= 1.0 && < 1.1
    ghc-options:       -Wall -O2 -fexcess-precision
-   ghc-prof-options:  -O2 -fexcess-precision -prof -auto-all
 
