--- a/bling.cabal
+++ b/bling.cabal
@@ -41,6 +41,7 @@ Library
       Graphics.Bling.Spectrum,
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
+      Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
       Graphics.Bling.IO.ParserCore,
       Graphics.Bling.IO.RenderJob,
