Added support for parsing black body emission, investigating geometric light bugx.

--- a/bling.cabal
+++ b/bling.cabal
@@ -32,6 +32,7 @@ Library
       Graphics.Bling.Image,
       Graphics.Bling.Light,
       Graphics.Bling.Math,
+      Graphics.Bling.Montecarlo,
       Graphics.Bling.Pathtracer,
       Graphics.Bling.Primitive,
       Graphics.Bling.Random,
