Moved Pathtracer to Integrator.

--- a/bling.cabal
+++ b/bling.cabal
@@ -33,7 +33,6 @@ Library
       Graphics.Bling.Light,
       Graphics.Bling.Math,
       Graphics.Bling.Montecarlo,
-      Graphics.Bling.Pathtracer,
       Graphics.Bling.Primitive,
       Graphics.Bling.Random,
       Graphics.Bling.Reflection,
@@ -42,6 +41,7 @@ Library
       Graphics.Bling.Spectrum,
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
+      Graphics.Bling.Integrator.Pathtracer,
       Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
       Graphics.Bling.IO.ParserCore,
