Refactored Integrator into the SurfaceIntegrator type class.

--- a/bling.cabal
+++ b/bling.cabal
@@ -30,6 +30,7 @@ Library
       Graphics.Bling.Camera,
       Graphics.Bling.Filter,
       Graphics.Bling.Image,
+      Graphics.Bling.Integrator,
       Graphics.Bling.Light,
       Graphics.Bling.Math,
       Graphics.Bling.Montecarlo,
@@ -41,7 +42,8 @@ Library
       Graphics.Bling.Spectrum,
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
-      Graphics.Bling.Integrator.Pathtracer,
+      Graphics.Bling.Integrator.Path,
+      Graphics.Bling.IO.IntegratorParser,
       Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
       Graphics.Bling.IO.ParserCore,
