Added support for direct lighting integrator.

--- a/bling.cabal
+++ b/bling.cabal
@@ -46,6 +46,7 @@ Library
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
       Graphics.Bling.Integrator.Path,
+      Graphics.Bling.Integrator.DirectLighting,
       Graphics.Bling.IO.IntegratorParser,
       Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
