Added lookAt to Transform.

--- a/bling.cabal
+++ b/bling.cabal
@@ -13,6 +13,7 @@ Library
       base >= 3 && < 5,
       haskell98,
       mwc-random,
+      Vec == 0.9.*,
       vector,
       bitset,
       bytestring,
