Big makeover for Camera.

--- a/bling.cabal
+++ b/bling.cabal
@@ -48,6 +48,7 @@ Library
       Graphics.Bling.Transform,
       Graphics.Bling.Integrator.Path,
       Graphics.Bling.Integrator.DirectLighting,
+      Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
       Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
