Shuffling image and lens samples in Stratified.

--- a/bling.cabal
+++ b/bling.cabal
@@ -21,7 +21,8 @@ Library
       parsec,
       pretty,
       deepseq >= 1.1 && < 1.2,
-      random >= 1.0 && < 1.1
+      random >= 1.0 && < 1.1,
+      random-shuffle == 0.0.2
 
    Ghc-Options:
       -Wall -O2 -fexcess-precision -fspec-constr-count=64
