Started working on GuiMain.

--- a/bling.cabal
+++ b/bling.cabal
@@ -75,6 +75,16 @@ Executable bling
    ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64
    ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts
 
+Executable bling-gui
+   hs-source-dirs:   src/Graphics/Bling/Main
+   Main-is:          GuiMain.hs
+   Build-Depends:
+      bling, base, haskell98, pretty, random, mwc-random,
+      SDL
+
+   ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64
+   ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts
+
 Executable bling-test
   Hs-Source-Dirs:    src/Graphics/Bling/Main
   Main-Is:           Tests.hs
