--- a/bling.cabal
+++ b/bling.cabal
@@ -66,6 +66,7 @@ Library
       Graphics.Bling.Material.Metal,
       Graphics.Bling.Material.Plastic,
       Graphics.Bling.Material.Specular,
+      Graphics.Bling.Primitive.Fractal,
       Graphics.Bling.Sampler.Random,
       Graphics.Bling.Sampler.Stratified
 
