--- a/bling.cabal
+++ b/bling.cabal
@@ -75,6 +75,7 @@ Library
       Graphics.Bling.Material.Plastic,
       Graphics.Bling.Material.Specular,
       Graphics.Bling.Primitive.Fractal,
+      Graphics.Bling.Primitive.KdTree,
       Graphics.Bling.Sampler.Random,
       Graphics.Bling.Sampler.Stratified
 
