--- a/bling.cabal
+++ b/bling.cabal
@@ -40,7 +40,6 @@ Library
 
    Exposed-Modules:
       Graphics.Bling.AABB,
-      Graphics.Bling.Bvh,
       Graphics.Bling.Camera,
       Graphics.Bling.Filter,
       Graphics.Bling.Image,
@@ -74,6 +73,7 @@ Library
       Graphics.Bling.Material.Metal,
       Graphics.Bling.Material.Plastic,
       Graphics.Bling.Material.Specular,
+      Graphics.Bling.Primitive.Bvh,
       Graphics.Bling.Primitive.Fractal,
       Graphics.Bling.Primitive.KdTree,
       Graphics.Bling.Sampler.Random,
