--- a/bling.cabal
+++ b/bling.cabal
@@ -125,5 +125,5 @@ Executable bling-benchmark
       bitset, bytestring, parsec, pretty,
       criterion >= 0.5 && < 0.6,
       random >= 1.0 && < 1.1
-   ghc-options:       -Wall -O2 -fexcess-precision
+   ghc-options:       -Wall -O2 -fexcess-precision -rtsopts
 
