Big cleanup, can create custom Renderers now.

--- a/bling.cabal
+++ b/bling.cabal
@@ -58,6 +58,7 @@ Library
       Graphics.Bling.Spectrum,
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
+      Graphics.Bling.Types,
       Graphics.Bling.Integrator.BidirPath,
       Graphics.Bling.Integrator.Path,
       Graphics.Bling.Integrator.DirectLighting,
@@ -67,7 +68,7 @@ Library
       Graphics.Bling.IO.MaterialParser,
       Graphics.Bling.IO.ParserCore,
       Graphics.Bling.IO.RenderJob,
-      Graphics.Bling.IO.SamplerParser,
+      Graphics.Bling.IO.RendererParser,
       Graphics.Bling.IO.ShapeParser,
       Graphics.Bling.IO.TransformParser,
       Graphics.Bling.Material.Lafortune,
