Started working on light tracer.

--- a/bling.cabal
+++ b/bling.cabal
@@ -60,8 +60,9 @@ Library
       Graphics.Bling.Transform,
       Graphics.Bling.Types,
       Graphics.Bling.Integrator.BidirPath,
-      Graphics.Bling.Integrator.Path,
       Graphics.Bling.Integrator.DirectLighting,
+      Graphics.Bling.Integrator.LightTracer,
+      Graphics.Bling.Integrator.Path,
       Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
       Graphics.Bling.IO.LightParser,
