--- a/bling.cabal
+++ b/bling.cabal
@@ -79,6 +79,7 @@ Library
       Graphics.Bling.Material.Plastic,
       Graphics.Bling.Material.Specular,
       Graphics.Bling.Material.Substrate,
+      Graphics.Bling.Primitive.Bezier,
       Graphics.Bling.Primitive.Bvh,
       Graphics.Bling.Primitive.Fractal,
       Graphics.Bling.Primitive.KdTree,
