--- a/bling.cabal
+++ b/bling.cabal
@@ -95,15 +95,13 @@ Executable bling
 Executable bling-gui
    if flag(Gui)
       Buildable:     True
+      Build-Depends: bling, base, haskell98, pretty, random, mwc-random, SDL
    else
       Buildable:     False
       
    hs-source-dirs:   src/Graphics/Bling/Main
    Main-is:          GuiMain.hs
-   Build-Depends:
-      bling, base, haskell98, pretty, random, mwc-random,
-      SDL
-
+   
    ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64 -rtsopts -threaded
    ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts
 
