Replaced kd-tree vision executable with debug integrator.

--- a/bling.cabal
+++ b/bling.cabal
@@ -62,6 +62,7 @@ Library
       Graphics.Bling.Transform,
       Graphics.Bling.Types,
       Graphics.Bling.Integrator.BidirPath,
+      Graphics.Bling.Integrator.Debug,
       Graphics.Bling.Integrator.DirectLighting,
       Graphics.Bling.Integrator.LightTracer,
       Graphics.Bling.Integrator.Path,
@@ -88,13 +89,6 @@ Library
 Executable bling
    hs-source-dirs:   src/Graphics/Bling/Main
    Main-is:          Main.hs
-   Build-Depends:    bling, base, haskell98, pretty, random, mwc-random
-   ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64 -rtsopts -threaded
-   ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts
-
-Executable bling-treevis
-   hs-source-dirs:   src/Graphics/Bling/Main
-   Main-is:          KdTreeVision.hs
    Build-Depends:    bling, base, haskell98, pretty, random, mwc-random
    ghc-options:      -Wall -O2 -fexcess-precision -fspec-constr-count=64 -rtsopts -threaded
    ghc-prof-options: -O2 -fexcess-precision -prof -auto-all -rtsopts
