--- a/bling.cabal
+++ b/bling.cabal
@@ -65,6 +65,7 @@ Library
       Graphics.Bling.Integrator.Debug,
       Graphics.Bling.Integrator.DirectLighting,
       Graphics.Bling.Integrator.LightTracer,
+      Graphics.Bling.Integrator.Metropolis,
       Graphics.Bling.Integrator.Path,
       Graphics.Bling.IO.CameraParser,
       Graphics.Bling.IO.IntegratorParser,
