Started working on indexed meshes, added Unbox Vector instance.

--- a/bling.cabal
+++ b/bling.cabal
@@ -87,7 +87,8 @@ Library
       Graphics.Bling.Primitive.Bezier,
       Graphics.Bling.Primitive.Bvh,
       Graphics.Bling.Primitive.Fractal,
-      Graphics.Bling.Primitive.KdTree
+      Graphics.Bling.Primitive.KdTree,
+      Graphics.Bling.Primitive.TriangleMesh
 
 Executable bling
    hs-source-dirs:   src/Graphics/Bling/Main
