Added rudimentary support for reading Wavefront obj models.

--- a/bling.cabal
+++ b/bling.cabal
@@ -78,6 +78,7 @@ Library
       Graphics.Bling.IO.RGBE,
       Graphics.Bling.IO.ShapeParser,
       Graphics.Bling.IO.TransformParser,
+      Graphics.Bling.IO.WaveFront,
       Graphics.Bling.Material.Lafortune,
       Graphics.Bling.Material.Matte,
       Graphics.Bling.Material.Metal,
