Converted sun/sky light into a SpectrumMap so it can make use of the inifinite light's importance sampling.

--- a/bling.cabal
+++ b/bling.cabal
@@ -58,6 +58,7 @@ Library
       Graphics.Bling.Scene,
       Graphics.Bling.Shape,
       Graphics.Bling.Spectrum,
+      Graphics.Bling.SunSky,
       Graphics.Bling.Texture,
       Graphics.Bling.Transform,
       Graphics.Bling.Types,
