Removed support for Triangle shape (must use the more efficient TriangleMesh).

--- a/bling.cabal
+++ b/bling.cabal
@@ -73,10 +73,10 @@ Library
       Graphics.Bling.IO.LightParser,
       Graphics.Bling.IO.MaterialParser,
       Graphics.Bling.IO.ParserCore,
+      Graphics.Bling.IO.PrimitiveParser,
       Graphics.Bling.IO.RenderJob,
       Graphics.Bling.IO.RendererParser,
       Graphics.Bling.IO.RGBE,
-      Graphics.Bling.IO.ShapeParser,
       Graphics.Bling.IO.TransformParser,
       Graphics.Bling.IO.WaveFront,
       Graphics.Bling.Material.Lafortune,
