--- a/bling.cabal
+++ b/bling.cabal
@@ -85,6 +85,7 @@ Library
       Graphics.Bling.Material.Plastic,
       Graphics.Bling.Material.Specular,
       Graphics.Bling.Material.Substrate,
+      Graphics.Bling.Material.Wood,
       Graphics.Bling.Primitive.Bezier,
       Graphics.Bling.Primitive.Bvh,
       Graphics.Bling.Primitive.Fractal,
