Moved geometric primitives to separate module.

--- a/bling.cabal
+++ b/bling.cabal
@@ -90,6 +90,7 @@ Library
       Graphics.Bling.Primitive.Bezier,
       Graphics.Bling.Primitive.Bvh,
       Graphics.Bling.Primitive.Fractal,
+      Graphics.Bling.Primitive.Geometry,
       Graphics.Bling.Primitive.KdTree,
       Graphics.Bling.Primitive.TriangleMesh,
       Graphics.Bling.Renderer.SPPM
