--- a/bling.cabal
+++ b/bling.cabal
@@ -18,10 +18,10 @@ Flag Devel
 Library
    Hs-Source-Dirs:   src
    Build-Depends:
-      base              == 4.5.*,
+      base              >= 4.3,
       bytestring        == 0.9.*,
       deepseq           == 1.3.*,
-      filepath          == 1.3.*,
+      filepath          >= 1.2,
       mtl               == 2.1.*,
       mwc-random        == 0.12.*,
       parsec            == 3.1.*,
@@ -36,10 +36,10 @@ Library
       vector-algorithms == 0.5.*
       
    Ghc-Options:
-      -Wall -O1 -fexcess-precision
+      -Wall -O2 -fexcess-precision
 
    Ghc-Prof-Options:
-      -O1 -fexcess-precision -prof
+      -O2 -fexcess-precision -prof
 
    Exposed-Modules:
       Graphics.Bling.AABB,
